Fix for width on ios

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,6 @@
 /** GENERAL STYLES **/
 html {
-    height: 100%; min-height: 100%;
+    height: 100%; min-height: 100%; width: 100%;
 }
 body {
     background-color: #fff;
@@ -9,7 +9,7 @@ body {
     line-height: 22px;
     font-family: 'Lato', sans-serif;
     -webkit-font-smoothing: antialiased;
-    height: 100%; min-height: 100%;
+    height: 100%; min-height: 100%; width: 100%;
 }
 
 .hidden { display:none !important; }
